--- a/src/html/clients.html
+++ b/src/html/clients.html
@@ -1,4 +1,6 @@
 <div x-data="clientManager" class="relative w-full px-12 py-4 2xl:px-20">
+  <!-- If no client is selected, show the selection modal -->
+
   <div class="table-scrollbar relative overflow-y-auto px-2 py-0" style="max-height: 80vh">
     <div class="mb-12 flex max-h-[20vh] justify-between align-middle">
       <div class="transition-all duration-500">
